[package]
name = "bookee"
version = "0.1.0"
authors = ["leiting <leitingtod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}

log = "0.4"
pretty_env_logger = "0.3"

error-chain = "0.12"
